--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,5 +1,21 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.image_full {
+    width: 100%;
+    height: auto;
+}
+
+.hero_slider {
+    max-height: 500px;
+
+    .swiper-pagination-bullet {
+        background-color: #fff;
+        border: 1px solid #000;
+        width: 15px;
+        height: 15px;
+    }
 }
