--- a/frontend/components/Slider/Slider.module.scss
+++ b/frontend/components/Slider/Slider.module.scss
@@ -2,7 +2,8 @@
     background-color: rgba(0, 0, 0, 0.6);
     color: #fff;
     position: absolute;
-    top: 35%;
+    top: 50%;
+    transform: translateY(-50%);
     right: 0;
     padding: 50px;
     text-align: center;
