--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -9,6 +9,10 @@
     height: auto;
 }
 
+.layout {
+    background-color: #F1F5F9;
+}
+
 .hero_slider {
     .swiper-pagination-bullet {
         background-color: #fff;
