--- a/frontend/components/Footer/Footer.module.scss
+++ b/frontend/components/Footer/Footer.module.scss
@@ -14,17 +14,26 @@
             display: flex;
             align-items: center;
         }
+
+        @media screen and (max-width: 576px) {
+            gap: 20px;
+        }
     }
 
 &_links {
         display: flex;
         justify-content: center;
         gap: 35px;
-        padding: 35px;
+        padding: 35px 0;
 
         a {
             text-decoration: none;
             color: #fff;
+        }
+
+        @media screen and (max-width: 576px) {
+            flex-direction: column;
+            text-align: center;
         }
     }
 
