--- a/frontend/components/IndexCard/IndexCard.module.scss
+++ b/frontend/components/IndexCard/IndexCard.module.scss
@@ -1,6 +1,5 @@
 .index_card {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    text-align: center;
 
     h1 {
         font-size: 20px;
@@ -14,6 +13,8 @@
         background-color: #202930;
         color: #fff;
         padding: 20px;
+        text-align: center;
+
     }
 
     &_bottom {
@@ -26,7 +27,8 @@
             &_number {
                 border: 1px solid #000;
                 border-radius: 5px;
-                width: 20px;
+                min-width: 20px;
+                text-align: center;
             }
 
             &_text {
