--- a/frontend/components/Navigation/Navigation.module.scss
+++ b/frontend/components/Navigation/Navigation.module.scss
@@ -1,14 +1,37 @@
 .nav {
     background-color: #202930;
+    text-align: center;
 
     &_image {
         position: absolute;
-        top: -10px;
+        top: 0;
         z-index: 10;
+
+        @media only screen and (max-width: 992px) {
+            display: none;
+        }
+    }
+
+    &_brand {
+        display: none;
+        
+        h2 {
+            margin: 0;
+            font-size: 18px;
+
+            span {
+                font-size: 10px;
+            }
+        }
+        @media only screen and (max-width: 992px) {
+            display: block;
+        }
     }
 
     &_links {
         justify-content: flex-end;
+        padding: 10px;
+        
     }
 
     &_active {
