--- a/frontend/styles/Index.module.scss
+++ b/frontend/styles/Index.module.scss
@@ -11,4 +11,12 @@
         flex: 1;
         margin: 25px;
     }
+
+    @media only screen and (max-width: 992px) {
+        flex-direction: column;
+    }
+
+    @media only screen and (max-width: 768px) {
+        padding: 10px 0 30px 0;
+    }
 }
