--- a/frontend/styles/Login.module.scss
+++ b/frontend/styles/Login.module.scss
@@ -2,11 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 100px 0;
 
     .form {
         flex: 1;
         padding: 0 50px;
+        
+        button {
+            margin-top: 10px;
+        }
     }
 
     &_image {
@@ -17,5 +21,11 @@
             height: auto;
             border-radius: 25px;
         }
+    }
+
+    @media screen and (max-width: 992px) {
+        flex-direction: column;
+        gap: 50px;
+        padding: 50px 0;
     }
 }
