--- a/frontend/components/Navigation/Navigation.module.scss
+++ b/frontend/components/Navigation/Navigation.module.scss
@@ -17,10 +17,10 @@
         
         h2 {
             margin: 0;
-            font-size: 18px;
+            font-size: 1.125rem;
 
             span {
-                font-size: 10px;
+                font-size: 0.625rem;
             }
         }
         @media only screen and (max-width: 992px) {
