--- a/frontend/components/SideBar/SideBar.module.scss
+++ b/frontend/components/SideBar/SideBar.module.scss
@@ -1,7 +1,11 @@
 .sidebar {
     z-index: 999;
     width: 300px;
+    padding: 50px 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #202930;
 
     &_show {
@@ -11,6 +15,7 @@
     &_toggle {
         position: absolute;
         right: -48px;
+        top: 0;
         background-color: #202930;
         transition: 0.2s linear;
 
@@ -26,7 +31,18 @@
     &_logo {
         display: flex;
         justify-content: center;
-        margin-top: 30px;
+    }
+
+    &_links {
+    
+        &_user {
+            max-width: 80%;
+            margin: 0 auto;
+
+            button {
+                width: 100%;
+            }
+        }
     }
 
     @media screen and (max-width: 1024px) {
