--- a/frontend/components/Slider/Slider.module.scss
+++ b/frontend/components/Slider/Slider.module.scss
@@ -9,6 +9,10 @@
     text-align: center;
     border-radius: 20px 0 0 20px;
 
+    img {
+        margin: 0 auto;
+    }
+
     @media screen and (max-width: 1200px) {
         border-radius: 0;
     }
