--- a/frontend/styles/DashboardLayout.module.scss
+++ b/frontend/styles/DashboardLayout.module.scss
@@ -1,7 +1,16 @@
 .dashboard {
+
+    &_spinner {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     &_container {
         display: flex;
         min-height: 100vh;
         overflow: hidden;
     }
+    
 }
