--- a/views/welcome_screen.html
+++ b/views/welcome_screen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory System API</title>
+    <title>IMS API | Home</title>
     <meta name="robots" content="noindex,nofollow">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
@@ -66,7 +66,7 @@
         <path d="M10 0v6h6V0zm5 1v4h-4V1zM8 1V0h1v2H8v2H7V1zm0 5V4h1v2zM6 8V7h1V6h1v2h1V7h5v1h-4v1H7V8zm0 0v1H2V8H1v1H0V7h3v1zm10 1h-1V7h1zm-1 0h-1v2h2v-1h-1zm-4 0h2v1h-1v1h-1zm2 3v-1h-1v1h-1v1H9v1h3v-2zm0 0h3v1h-2v1h-1zm-4-1v1h1v-2H7v1z"/>
         <path d="M7 12h1v3h4v1H7zm9 2v2h-3v-1h2v-1z"/>
     </svg>
-    <h1 style="font-size: 2.5rem; color: #343a40;">Inventory System RestAPI</h1>
+    <h1 style="font-size: 2.5rem; color: #343a40;">Inventory Manacomgement System RestAPI</h1>
     <div class="btn-container">
         <button class="button button-green" onclick="generateDocs()">Open API Documentation (v1)</button>
         <button class="button button-blue" onclick="visitDashboard()">Visit Dashboard (dev)</button>
