--- a/views/welcome_screen.html
+++ b/views/welcome_screen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMS API | Home</title>
     <meta name="robots" content="noindex,nofollow">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         body {
@@ -68,7 +69,9 @@
     </svg>
     <h1 style="font-size: 2.5rem; color: #343a40;">Inventory Manacomgement System RestAPI</h1>
     <div class="btn-container">
-        <button class="button button-green" onclick="generateDocs()">Open API Documentation (v1)</button>
+        <button class="button button-green" id="generateDocs" onclick="generateDocs()">
+            Open API Documentation (v1)
+        </button>
         <button class="button button-blue" onclick="visitDashboard()">Visit Dashboard (dev)</button>
     </div>
 
@@ -78,17 +81,20 @@
     <p>&copy; 2024 Developed by PROGRAMATORI</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     let currentURL = window.location.href;
+    let genDocsBtn = document.getElementById('generateDocs');
+
+    async function generateDocs() {
+        genDocsBtn.innerHTML += '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span>';
+        await fetch(currentURL + "getDoc");
+        window.location.href = currentURL + "/swagger";
+    }
 
     function visitDashboard() {
         // Redirect to dashboard URL
         window.open('http://localhost:3000', '_blank');
-    }
-
-    async function generateDocs() {
-        await fetch(currentURL + "getDoc");
-        window.location.href = currentURL + "/swagger";
     }
 </script>
 </body>
