--- a/frontend/components/SideBar/SideBar.module.scss
+++ b/frontend/components/SideBar/SideBar.module.scss
@@ -41,6 +41,7 @@
 
             button {
                 width: 100%;
+                border-radius: 8px;
             }
         }
     }
@@ -74,6 +75,7 @@
             margin: 16px 0;
             align-items: center;
             gap: 8px;
+            border-radius: 8px;
             
         }
     }
