--- a/frontend/styles/Login.module.scss
+++ b/frontend/styles/Login.module.scss
@@ -2,17 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 25px;
     padding: 100px 0;
-
-    .form {
-        flex: 1;
-        padding: 0 50px;
-        
-        button {
-            margin-top: 10px;
-            width: 80px;
-        }
-    }
 
     &_image {
         flex: 1;
