--- a/frontend/components/LoginForm/LoginForm.module.scss
+++ b/frontend/components/LoginForm/LoginForm.module.scss
@@ -15,12 +15,14 @@
         margin-top: 10px;
         gap: 10px;
 
-        button[type="submit"] {
-            width: 80px;
-
+        button {
             @media only screen and (max-width: 400px) {
                 font-size: 0.8rem;
             }
+        }
+
+        button[type="submit"] {
+            width: 80px;
         }
 
         @media only screen and (max-width: 400px) {
