--- a/frontend/components/LoginForm/LoginForm.module.scss
+++ b/frontend/components/LoginForm/LoginForm.module.scss
@@ -7,8 +7,6 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
     border-radius: 8px;
 
-
-    
     &_buttons {
         display: flex;
         align-items: center;
@@ -19,15 +17,18 @@
             @media only screen and (max-width: 400px) {
                 font-size: 0.8rem;
             }
-        }
-
-        button[type="submit"] {
-            width: 80px;
+            &[type="submit"] {
+                width: 80px;
+            } 
         }
 
         @media only screen and (max-width: 400px) {
             flex-direction: column;
             align-items: flex-start;
         }
+    }
+
+    @media only screen and (max-width: 992px) {
+        padding: 25px;
     }
 }
