--- a/frontend/styles/Login.module.scss
+++ b/frontend/styles/Login.module.scss
@@ -16,9 +16,15 @@
         }
     }
 
+    @media screen and (max-width: 1200px) {
+        padding: 150px 0;
+    }
+
     @media screen and (max-width: 992px) {
         flex-direction: column;
         gap: 50px;
         padding: 50px 0;
     }
+
+ 
 }
