--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -10,7 +10,7 @@
 }
 
 .layout {
-    background-color: #F1F5F9;
+    background-color: #f1f5f9;
 }
 
 .hero_slider {
@@ -19,6 +19,46 @@
         border: 1px solid #000;
         width: 15px;
         height: 15px;
+    }
+}
+
+.workbench_slider {
+    height: 100%;
+    .swiper-pagination {
+        bottom: 35px;
+
+        &-bullet {
+            background-color: #202930;
+            border: 1px solid #000;
+            width: 15px;
+            height: 15px;
+
+            @media only screen and (max-width: 576px) {
+                width: 10px;
+                height: 10px;
+            }
+        }
+
+        @media only screen and (max-width: 576px) {
+            bottom: 10px;
+        }
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        top: unset;
+        bottom: 35px;
+        color: #202930;
+        z-index: 50;
+
+        &::after {
+            @media only screen and (max-width: 576px) {
+                font-size: 25px;
+            }
+        }
+
+        @media only screen and (max-width: 576px) {
+            bottom: 0;
+        }
     }
 }
 
