repo pattern, user reset mail

--- a/templates/email/ResetMail.html
+++ b/templates/email/ResetMail.html
@@ -83,8 +83,9 @@
         <img src="https://i.ibb.co/5MZkmhy/reset-password.png" alt="Hand shake icon">
     </div>
     <div class="content">
+        <p>Hi {{userName}},</p>
         <p>Resetting your password is quick and easy. Just follow the link below to regain access to your account.</p>
-        <a href="" class="button">Reset your password</a>
+        <a href="{{resetPasswordLink}}" class="button">Reset your password</a>
     </div>
 
     <div class="footer">
