--- a/frontend/styles/DashboardLayout.module.scss
+++ b/frontend/styles/DashboardLayout.module.scss
@@ -1,5 +1,4 @@
 .dashboard {
-
     &_spinner {
         min-height: 100vh;
         display: flex;
@@ -12,5 +11,8 @@
         min-height: 100vh;
         overflow: hidden;
     }
-    
+
+    &_main {
+        width: 100%;
+    }
 }
