--- a/frontend/components/Date/Date.module.scss
+++ b/frontend/components/Date/Date.module.scss
@@ -9,6 +9,9 @@
     align-items: center;
     justify-content: center;
     padding: 0 16px;
+    position: absolute;
+    right: 50px;
+    bottom: 50px;
 
     @media only screen and (max-width: 576px) {
         font-size: 0.9rem;
