--- a/frontend/components/SideBar/SideBar.module.scss
+++ b/frontend/components/SideBar/SideBar.module.scss
@@ -1,8 +1,8 @@
 .sidebar {
     z-index: 999;
-    width: 300px;
     padding: 50px 0;
     min-height: 100vh;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -30,13 +30,7 @@
         }
     }
 
-    &_logo {
-        display: flex;
-        justify-content: center;
-    }
-
     &_bottom {
-    
         &_user {
             max-width: 80%;
             margin: 0 auto;
@@ -48,6 +42,12 @@
         }
     }
 
+    &_top {
+        &_profile {
+            padding: 24px;
+        }
+    }
+
     @media screen and (max-width: 1024px) {
         position: absolute;
         top: 0;
@@ -55,37 +55,29 @@
         transition: 0.3s linear;
         backface-visibility: hidden;
         will-change: left;
-
     }
 
     &_navigation {
-        padding: 16px 24px;
-
-        &_header {
-            color: #F1F5F9;
-            font-size: 1rem;
-            margin-bottom: 16px;
-        }
+        padding: 24px;
 
         &_list {
             list-style-type: none;
             padding: 0;
             text-align: center;
         }
-       
+
         &_item {
-            color: #F1F5F9;
+            color: #f1f5f9;
             display: flex;
             padding: 8px;
             margin: 16px 0;
             align-items: center;
             gap: 8px;
             border-radius: 8px;
-            
         }
     }
 
     &_active {
-        background-color: #64748B;
+        background-color: #64748b;
     }
 }
