--- a/frontend/components/FormInput/FormInput.module.scss
+++ b/frontend/components/FormInput/FormInput.module.scss
@@ -4,7 +4,7 @@
     &_toggle_button {
         position: absolute;
         top: 10px;
-    
+
         &:hover {
             cursor: pointer;
         }
@@ -22,8 +22,12 @@
         @media screen and (max-width: 400px) {
             top: 7px;
         }
+
+        &_select {
+            right: 25px;
+        }
     }
-    
+
     @media screen and (max-width: 400px) {
         input {
             font-size: 0.8rem;
