--- a/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
+++ b/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
@@ -1,8 +1,11 @@
-.profile_form {
+.profile_password {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
-    width: 50%;
+    height: fit-content;
     transition: scale 0.3s ease;
 
     &_header {
@@ -27,4 +30,8 @@
     &:hover {
         scale: 1.01;
     }
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
