--- a/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
+++ b/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
@@ -1,49 +1,51 @@
-.profile_photo {
+.profile {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 24px;
+    position: relative;
+    width: 60%;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
 
-    &_header {
-        border-bottom: 1px solid #202930;
-        padding: 24px;
+    &_picture {
+        position: relative;
+        width: fit-content;
 
-        h3 {
-            margin: 0;
-            font-size: 1.3rem;
-        }
-    }
-
-    &_body {
-        display: flex;
-        align-items: center;
-        gap: 32px;
-        padding: 36px;
-
-        &_left {
-            img {
-                border-radius: 8px;
-            }
+        img {
+            border-radius: 100%;
         }
 
-        &_right {
+        &_add {
             display: flex;
-            flex-direction: column;
-            gap: 16px;
-
-            &_buttons {
-                display: flex;
-                gap: 16px;
-
-                input[type="file"] {
-                    display: none;
+            position: absolute;
+            right: 15px;
+            bottom: 5px;
+            z-index: 10;
+            label {
+                transition: scale 0.3s ease;
+                &:hover {
+                    cursor: pointer;
+                    scale: 1.3;
                 }
             }
-
-            h3 {
-                font-size: 1.4rem;
-            }
         }
     }
+
+    &_information {
+        p {
+            margin: 0;
+        }
+        &_name {
+            font-size: 1.5rem;
+            font-weight: 500;
+        }
+    }
+}
+
+.picture {
+    max-height: 150px;
 }
