--- a/frontend/components/ProfileProgress/ProfileProgress.module.scss
+++ b/frontend/components/ProfileProgress/ProfileProgress.module.scss
@@ -2,6 +2,7 @@
     background-color: #202930;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
+    width: 40%;
 
     &_top {
         border-bottom: 1px solid #fff;
