--- a/frontend/components/SideBar/SideBar.module.scss
+++ b/frontend/components/SideBar/SideBar.module.scss
@@ -30,21 +30,11 @@
         }
     }
 
-    &_bottom {
-        &_user {
-            max-width: 80%;
-            margin: 0 auto;
-
-            button {
-                width: 100%;
-                border-radius: 8px;
-            }
-        }
-    }
-
     &_top {
-        &_profile {
-            padding: 24px;
+        &_logo {
+            padding: 0 24px;
+            display: flex;
+            justify-content: center;
         }
     }
 
@@ -72,8 +62,12 @@
             padding: 8px;
             margin: 16px 0;
             align-items: center;
-            gap: 8px;
+            gap: 16px;
             border-radius: 8px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
