--- a/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
+++ b/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
@@ -15,6 +15,10 @@
         h3 {
             margin: 0;
             font-size: 1.3rem;
+
+            @media only screen and (max-width: 576px) {
+                font-size: 1.2rem;
+            }
         }
     }
 
@@ -25,10 +29,20 @@
         &_form {
             margin: 24px;
         }
+
+        button {
+            @media only screen and (max-width: 400px) {
+                font-size: 0.8rem;
+            }
+        }
     }
 
     &:hover {
         scale: 1.01;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        width: 100%;
     }
 }
 
