--- a/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
+++ b/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
@@ -10,6 +10,7 @@
     background-color: #fff;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
+    padding: 15px;
 
     &_picture {
         position: relative;
@@ -32,6 +33,11 @@
                     scale: 1.3;
                 }
             }
+
+            @media only screen and (max-width: 576px) {
+                right: 5px;
+                bottom: 0;
+            }
         }
     }
 
@@ -42,10 +48,33 @@
         &_name {
             font-size: 1.5rem;
             font-weight: 500;
+
+            @media only screen and (max-width: 576px) {
+                font-size: 1.2rem;
+            }
         }
+
+        &_email {
+            @media only screen and (max-width: 576px) {
+                font-size: 0.9rem;
+            }
+        }
+    }
+
+    @media only screen and (max-width: 1500px) {
+        width: 50%;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        width: 100%;
     }
 }
 
 .picture {
     max-height: 150px;
+
+    @media only screen and (max-width: 576px) {
+        max-width: 100px;
+        max-height: 100px;
+    }
 }
