--- a/frontend/styles/Profile.module.scss
+++ b/frontend/styles/Profile.module.scss
@@ -9,11 +9,23 @@
             display: flex;
             flex: 1;
             gap: 40px;
+
+            @media only screen and (max-width: 1200px) {
+                flex-direction: column-reverse;
+            }
         }
 
         &_bottom {
             display: flex;
             gap: 40px;
+
+            @media only screen and (max-width: 1200px) {
+                flex-direction: column;
+            }
+        }
+
+        @media only screen and (max-width: 576px) {
+            padding: 40px 15px;
         }
     }
 }
