--- a/frontend/components/FormInput/FormInput.module.scss
+++ b/frontend/components/FormInput/FormInput.module.scss
@@ -18,6 +18,7 @@
         position: absolute;
         top: 10px;
         right: 15px;
+        z-index: 10;
 
         @media screen and (max-width: 400px) {
             top: 7px;
