minor changes - design and default case

--- a/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
+++ b/frontend/components/ProfilePasswordForm/ProfilePasswordForm.module.scss
@@ -6,7 +6,6 @@
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
     height: fit-content;
-    transition: scale 0.3s ease;
 
     &_header {
         padding: 24px 24px 6px 24px;
@@ -31,14 +30,12 @@
         }
 
         button {
+            background-color: #202930;
+            border-color: #202930;
             @media only screen and (max-width: 400px) {
                 font-size: 0.8rem;
             }
         }
-    }
-
-    &:hover {
-        scale: 1.01;
     }
 
     @media only screen and (max-width: 1200px) {
