--- a/frontend/components/DashboardHeader/DashboardHeader.module.scss
+++ b/frontend/components/DashboardHeader/DashboardHeader.module.scss
@@ -5,6 +5,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 10;
 
     @media only screen and (min-width: 1024px) {
         padding: 20px 80px;
