--- a/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
+++ b/frontend/components/ProfilePhoto/ProfilePhoto.module.scss
@@ -41,6 +41,10 @@
         }
     }
 
+    &_error {
+        border: 1px solid #f00;
+    }
+
     &_information {
         p {
             margin: 0;
