--- a/frontend/styles/Profile.module.scss
+++ b/frontend/styles/Profile.module.scss
@@ -4,6 +4,7 @@
         display: flex;
         flex-direction: column;
         gap: 40px;
+        max-height: calc(100dvh - 80px);
 
         &_top {
             display: flex;
@@ -22,6 +23,10 @@
             @media only screen and (max-width: 1200px) {
                 flex-direction: column;
             }
+        }
+
+        @media only screen and (max-width: 1800px) {
+            overflow-y: scroll;
         }
 
         @media only screen and (max-width: 576px) {
