--- a/templates/pages/welcome_screen.html
+++ b/templates/pages/welcome_screen.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
+        * {
             padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        body {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
+
         .container {
             text-align: center;
             flex-grow: 1;
@@ -25,6 +29,7 @@
             align-items: center;
             gap: 0.5em
         }
+
         .button {
             padding: 10px 20px;
             font-size: 16px;
@@ -38,6 +43,7 @@
         .button:hover {
             filter: brightness(90%);
         }
+
         footer {
             background-color: #202930;
             color: white;
@@ -57,21 +63,6 @@
             flex-direction: column;
             min-width: 360px;
         }
-        .button-json {
-            background-color: #FFD700; /* Yellow */
-            padding: 10px 20px;
-            font-size: 16px;
-            color: black;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-bottom: 10px;
-        }
-
-        .button-json:hover {
-            filter: brightness(90%);
-        }
     </style>
 </head>
 <body>
@@ -84,12 +75,13 @@
         <path d="M10 0v6h6V0zm5 1v4h-4V1zM8 1V0h1v2H8v2H7V1zm0 5V4h1v2zM6 8V7h1V6h1v2h1V7h5v1h-4v1H7V8zm0 0v1H2V8H1v1H0V7h3v1zm10 1h-1V7h1zm-1 0h-1v2h2v-1h-1zm-4 0h2v1h-1v1h-1zm2 3v-1h-1v1h-1v1H9v1h3v-2zm0 0h3v1h-2v1h-1zm-4-1v1h1v-2H7v1z"/>
         <path d="M7 12h1v3h4v1H7zm9 2v2h-3v-1h2v-1z"/>
     </svg>
-    <h1 style="font-size: 2.5rem; color: #343a40;">Inventory Management System RestAPI</h1>
+    <h2 style="font-size: 2.5rem; color: #343a40;">Inventory Management System RestAPI</h2>
     <div class="btn-container">
         <button class="button button-green d-flex flex-row gap-1 align-items-center justify-content-center" id="generateDocs" onclick="generateDocs()">
             <span>Open API Documentation (v1)</span>
             <span class="spinner-border spinner-border-sm" aria-hidden="true" id="spinner"></span>
         </button>
+        <button class="button button-phpmyadmin" onclick="visitPhpmyadmin()">phpmyadmin</button>
         <button class="button button-blue" onclick="visitDashboard()">Visit Dashboard (dev)</button>
 
     </div>
@@ -112,7 +104,9 @@
         //if its still under development, generate new json each time user wants to visit swagger
         if(isUnderDevelopment) {
             generateDocsButtonSpinner.style.display = 'block';
-            await fetch(currentURL + requestMethod);
+            let resp = await fetch(currentURL + requestMethod);
+            let respJson = await resp.json();
+            console.log(respJson)
             generateDocsButtonSpinner.style.display = 'none';
         }
         window.location.href = currentURL + "/swagger";
@@ -120,6 +114,10 @@
 
     function visitDashboard() {
         window.open('http://localhost:3000', '_blank');
+    }
+
+    function visitPhpmyadmin() {
+        window.open(currentURL + '/phpmyadmin');
     }
 </script>
 </body>
